--- a/class/final.html
+++ b/class/final.html
@@ -13,9 +13,13 @@
                 <div class="body">
                     <div class="body__informationBox">
                         <input type="text" id="in1" placeholder="이메일을 입력해 주세요.">
+                        <div id="fail_1"></div>
                         <input type="text" id="in2" placeholder="이름을 입력해 주세요.">
+                        <div id="fail_2"></div>
                         <input type="password" id="in3" placeholder="비밀번호를 입력해 주세요.">
+                        <div id="fail_3"></div>
                         <input type="password" id="in4" placeholder="비밀번호를 다시 입력해 주세요.">
+                        <div id="fail_4"></div>
                     </div>
                     <div class="body__phoneBox">
                         <input type="text" id="ph1" oninput="changeFocus1();changeFocus3()" maxlength="3"> -
