--- a/cyworld/index.html
+++ b/cyworld/index.html
@@ -59,7 +59,7 @@
                         </div>
                     </div>
                     <div class="wrapper_right_body">
-                        <iframe id="contentFrame" src="./home.html"></iframe>
+                        <iframe id="contentFrame" src="./jukebox.html"></iframe>
                     </div>
                 </div>
                 <div class="navigation">
